# erpnextswiss

./: .gitignore  CONTRIBUTING.md  ISSUE_TEMPLATE.md  MANIFEST.in  README.md  README_V16.md  license.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: erpnextswiss-ci.yml
erpnextswiss/: __init__.py  hooks.py  modules.txt  patches.txt
erpnextswiss/config/: desktop.py  docs.py  erpnextswiss.py
erpnextswiss/desktop_icon/: erpnextswiss.json
erpnextswiss/docs/: pain.001.001.03.ch.02.xsd
erpnextswiss/docs/bank_templates/: BankImport_Template_FNB.xlsx
erpnextswiss/docs/custom_scripts/: payment_entry.js  purchase_invoice.js
erpnextswiss/docs/holiday_lists/: .~lock.Holiday_List_2022.xlsx#  Holiday_List_2022.xlsx  Holiday_List_2023.xlsx
erpnextswiss/docs/sql/: install_VAT_views.sh  viewVAT_200.sql  viewVAT_220.sql  viewVAT_221.sql  viewVAT_225.sql  viewVAT_230.sql  viewVAT_235.sql  viewVAT_301.sql  viewVAT_302.sql  viewVAT_311.sql  viewVAT_312.sql  viewVAT_321.sql  viewVAT_322.sql  viewVAT_331.sql  viewVAT_332.sql  viewVAT_341.sql  viewVAT_342.sql  viewVAT_381.sql  viewVAT_382.sql  viewVAT_400.sql  viewVAT_405.sql
erpnextswiss/docs/translations/: de.csv  fr.csv  it.csv
erpnextswiss/domains/: check_domains.py  hlk.py
erpnextswiss/erpnextswiss/: abaninja.py  assets.py  attach_pdf.py  caldav.py  calendar.py  common_functions.py  customer_specific_extension.py  datatrans.py  domains.py  dpd.py  dynamic_newsletter.py  ebics.py  edi.py  expenses.py  finance.py  gtin.py  guest_print.py  hr.py  iso20022.py  jinja.py  label_printing_client.py  looker.py  mautic.py  patch.py  payrexx.py  planzer.py  print_queue.py  reference_number.py  swisstopo.py  utils.py  vat_tools.py  xml.py  zefix.py  zugferd.py
erpnextswiss/erpnextswiss/coa_import/: .~lock.accounts_template.csv#  accounts_template.csv  coa_importer.py
erpnextswiss/erpnextswiss/custom/: account.json  address.json  contact.json  customer.json  employee.json  fiscal_year_company.json  item.json  item_default.json  item_group.json  journal_entry.json  salary_certificate.json  (+7 more)
erpnextswiss/fixtures/: custom_field.json  temp.json
erpnextswiss/public/: build.json
erpnextswiss/scripts/: asset_tools.py  crm_tools.py  esr_qr_tools.py  import_tools.py  item_tools.py  stock_tools.py  swiss_exchange_rates.py  worktime_utils.py
erpnextswiss/setup/: email_templates.py  install.py
erpnextswiss/translation/: de.csv
erpnextswiss/translations/: de.csv  fr.csv
erpnextswiss/workspace_sidebar/: schweizer_buchhaltung.json
(+556 files in other folders)
